# quartz-server

./: .env.example  .envv  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  run.sh  start.sh
alembic/: README  env.py
alembic/versions/: 3be2da4a8768_initial_tables.py  bcf8b6f24489_notes.py  c3d64dc30a55_users.py  e4230494f9f1_.py
src/: crud.py  db.py  exceptions.py  main.py  models.py  schemas.py  security.py  settings.py
src/api/: ai.py  login.py  main.py  notes.py  users.py
src/models/: __init__.py  note.py  user.py
src/services/ai/: gemini.py  instructions.py
