[project]
name = "quatz-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "fastapi[all,standard]>=0.115.12",
    "greenlet>=3.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.40",
]
